<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>gwt-bean-validators</groupId>
	<artifactId>gwt-bean-validators</artifactId>
	<packaging>jar</packaging>
	<version>0.6.7</version>
	<name>GWT Bean Validators</name>

	<properties>
		<!-- Convenience property to set the GWT version -->
		<gwt.version>2.7.0</gwt.version>
		<validationApi.version>1.0.0.GA</validationApi.version>
		<hibernateValidator.version>4.1.0.Final</hibernateValidator.version>
		<junit.version>4.11</junit.version>
		<log4j.version>1.2.17</log4j.version>
		<slf4j.version>1.7.7</slf4j.version>
		<gwtCommonsLang.version>3.3.2-SNAPSHOT</gwtCommonsLang.version>
		<gwtCommonsValidator.version>1.4.0-SNAPSHOT</gwtCommonsValidator.version>
		<commonsBeanutils.version>1.8.3</commonsBeanutils.version>
		<wagonSSH.version>2.4</wagonSSH.version>
		<mavenResource.version>2.7</mavenResource.version>
		<mavenCompilerPlugin.version>3.2</mavenCompilerPlugin.version>
		<mavenSourcePlugin.version>2.4</mavenSourcePlugin.version>
		<mavenJavaDocPlugin.version>2.10.1</mavenJavaDocPlugin.version>
		<surefirePlugin.version>2.18</surefirePlugin.version>
		<checkstyle.version>2.13</checkstyle.version>
		<checkstyleTool.version>6.1.1</checkstyleTool.version>
		<pmd.version>3.2</pmd.version>
		<findbugs.version>3.0.0</findbugs.version>
		<cobertura.version>2.7.0-SNAPSHOT</cobertura.version>
		<jxr.version>2.4</jxr.version>

		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>de.knightsoft-net</id>
			<url>http://www.knightsoft-net.de/maven/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt</artifactId>
				<version>${gwt.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernateValidator.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernateValidator.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>gwt-commons-lang3</groupId>
			<artifactId>gwt-commons-lang3</artifactId>
			<version>${gwtCommonsLang.version}</version>
		</dependency>
		<dependency>
			<groupId>gwt-commons-lang3</groupId>
			<artifactId>gwt-commons-lang3</artifactId>
			<version>${gwtCommonsLang.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>gwt-commons-validator</groupId>
			<artifactId>gwt-commons-validator</artifactId>
			<version>${gwtCommonsValidator.version}</version>
		</dependency>
		<dependency>
			<groupId>gwt-commons-validator</groupId>
			<artifactId>gwt-commons-validator</artifactId>
			<version>${gwtCommonsValidator.version}</version>
			<classifier>sources</classifier>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils-core</artifactId>
			<version>${commonsBeanutils.version}</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<!-- the java source files must be on the classpath during gwt:compile -->
				<directory>src/main/java</directory>
			</resource>
			<resource>
				<!-- the java source files that override/emulate server-side classes 
					in the client must be on the classpath during gwt:compile -->
				<directory>src/main/super</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<!-- GWT Maven Plugin -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test</goal>
							<goal>resources</goal>
						</goals>
					</execution>
				</executions>
				<!-- Plugin configuration. There are many available options, see gwt-maven-plugin 
					documentation at codehaus.org -->
				<configuration>
					<modules>
						<module>de.knightsoftnet.validators.GwtBeanValidators</module>
					</modules>
					<logLevel>INFO</logLevel>
					<inplace>false</inplace>
					<style>OBFUSCATED</style>
					<failOnError>true</failOnError>
					<localWorkers>-1</localWorkers>
					<extraJvmArgs>-Xms512m -Xmx1g -XX:MaxPermSize=256m</extraJvmArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${mavenCompilerPlugin.version}</version>
				<configuration>
					<excludes>
						<value>**/supersource/**/*.java</value>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefirePlugin.version}</version>
				<configuration>
					<skip>true</skip>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
				<executions>
					<execution>
						<id>unit-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<skip>false</skip>
							<includes>
								<include>**/*Test.java</include>
							</includes>
							<excludes>
								<exclude>**/Abstract*Test.java</exclude>
								<exclude>**/GwtTest*Test.java</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${mavenResource.version}</version>
				<executions>
					<execution>
						<id>copy-localization-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<!-- this is important -->
							<overwrite>true</overwrite>
							<!-- target -->
							<outputDirectory>${basedir}/target/classes</outputDirectory>
							<resources>
								<resource>
									<!-- source -->
									<directory>src/main/resources/de/knightsoftnet/validators/client</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${mavenSourcePlugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<attach>true</attach>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${mavenJavaDocPlugin.version}</version>
				<executions>
					<execution>
						<id>attach-javadoc</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${checkstyle.version}</version>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>${checkstyleTool.version}</version>
					</dependency>
				</dependencies>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${pmd.version}</version>
				<configuration>
					<rulesets>
						<ruleset>.ruleset</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs.version}</version>
				<configuration>
					<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
				</configuration>
			</plugin>
			<!-- must be disabled, dosn't work with try-with-resource at the moment 
				<plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
				<version>${cobertura.version}</version> <configuration> <formats> <format>xml</format> 
				</formats> </configuration> </plugin> -->
		</plugins>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>${wagonSSH.version}</version>
			</extension>
		</extensions>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${checkstyle.version}</version>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${pmd.version}</version>
				<configuration>
					<rulesets>
						<ruleset>.ruleset</ruleset>
					</rulesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs.version}</version>
				<configuration>
					<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
				</configuration>
			</plugin>
			<!-- must be disabled, dosn't work with try-with-resource at the moment 
				<plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
				<version>${cobertura.version}</version> <configuration> <formats> <format>xml</format> 
				</formats> </configuration> </plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${jxr.version}</version>
			</plugin>
		</plugins>
	</reporting>

	<distributionManagement>
		<downloadUrl>http://www.knightsoft-net.de/maven/</downloadUrl>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>de.knightsoft-net</id>
			<name>KnightSoft-Net Maven Repository</name>
			<url>scp://www.knightsoft-net.de:2904/srv/www/htdocs/manfred/www.knightsoft-net.de/maven/</url>
			<layout>default</layout>
		</repository>
	</distributionManagement>

</project>
